--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
-    "target": "es5",
-    "jsx": "react",
+    "target": "es2021",
+    "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "node"
   }
