--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
