--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true,
+  "python.defaultInterpreterPath": "./venvScripts"
 }
