--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+*.env
 .env.local
 .env.development.local
 .env.test.local
@@ -25,5 +26,10 @@ yarn-error.log*
 # api
 config.py
 __pycache__/
+*.pyc
 .pytest_cache
 /api/.venv/
+
+# state contains sensitive info
+.terraform/
+.terraform.*
